klutch/manifests/gatewayNetworkingEnvoyConfig.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: anynines-backend-envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: backend-envoy-proxy-config
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: anynines-backend-gateway
spec:
  gatewayClassName: anynines-backend-envoy-gateway
  listeners:
  - name: http
    protocol: HTTP
    port: 8080
