klutch/manifests/gatewayNetworkingResourcesBackend.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: anynines-backend
spec:
  parentRefs:
  - name: anynines-backend-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: anynines-backend
      port: 8080
