klutch/manifests/gatewayNetworkingResourcesDex.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex-backend
  annotations:
spec:
  parentRefs:
  - name: anynines-backend-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /dex
    backendRefs:
    - name: dex
      port: 5556
